migrate success to GameResult class & internalLeft/RightClick isValid guard