@@ -52,7 +52,7 @@ public record GameBasicsImpl(MathValue<Player> time, MathValue<Player> difficult
     public GameSetting toGameSetting(Context<Player> context, Effect effect) {
         return new GameSetting(
                 time.evaluate(context) * effect.gameTimeMultiplier() + effect.gameTimeAdder(),
-                Math.min(100, Math.max(1, difficulty.evaluate(context) * effect.difficultyMultiplier() + effect.difficultyAdder()))
+                Math.clamp(difficulty.evaluate(context) * effect.difficultyMultiplier() + effect.difficultyAdder(), 1, 100)
         );
     }
 }
